ecmascript/parser/tests/test262-error-references/fail/c91a41d48af2ef00.js.stderr
error: TS1005
 --> $DIR/tests/test262-parser/fail/c91a41d48af2ef00.js:1:6
  |
1 | var a.b;
  |      ^

error: Unexpected token Some(Dot)
 --> $DIR/tests/test262-parser/fail/c91a41d48af2ef00.js:1:6
  |
1 | var a.b;
  |      ^

